--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "deploy:ci": "export ENV=CI && yarn samconfig && sam deploy -t cf.foci2020.yaml && yarn postdeploy --profile ci",
     "postdeploy": "aws lambda invoke --function-name Foci2020-${ENV}-PostDeploy /dev/null",
     "build:api": "rimraf ./dist/api && webpack",
+    "build:web": "rimraf ./dist/web && cd web && yarn build --prod",
     "test:api:dev": "jest --maxWorkers=4 --watchAll --silent",
     "test:api": "jest --maxWorkers=4 --silent",
-    "lint:api": "eslint . --ext .ts",
+    "lint:api": "eslint api shared test --ext .ts",
+    "lint:web": "eslint web shared --ext .ts",
     "lintfix:api": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
