--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "samconfig": "cp samconfig.${ENV}.toml samconfig.toml",
-    "deploy:local": "export ENV=LOCAL && yarn samconfig && sam deploy -t cf.foci2020.yaml && yarn postdeploy --profile losonczil",
-    "deploy:ci": "export ENV=CI && yarn samconfig && sam deploy -t cf.foci2020.yaml && yarn postdeploy --profile ci",
+    "deploy:api:LOCAL": "export ENV=LOCAL && yarn samconfig && sam deploy -t cf.foci2020.yaml --profile losonczil && yarn postdeploy --profile losonczil",
+    "deploy:api:CI": "export ENV=CI && yarn samconfig && sam deploy -t cf.foci2020.yaml -profile ci && yarn postdeploy --profile ci",
     "postdeploy": "aws lambda invoke --function-name Foci2020-${ENV}-PostDeploy /dev/null",
     "build:api": "rimraf ./dist/api && webpack",
-    "build:web": "rimraf ./dist/web && cd web && yarn build --prod",
+    "build:web:LOCAL": "export ENV=LOCAL && rimraf ./dist/web && cd web && yarn build -c ${ENV}",
+    "build:web:CI": "export ENV=CI && rimraf ./dist/web && cd web && yarn build -c ${ENV}",
+    "deploy:web:LOCAL": "export ENV=LOCAL && aws s3 sync dist/web s3://$(aws cloudformation describe-stacks --stack-name foci2020-${ENV} --query \"Stacks[0].Outputs[?OutputKey=='WebsiteBucket'].OutputValue\" --output text --profile losonczil) --profile losonczil",
+    "deploy:web:CI": "export ENV=CI && aws s3 sync dist/web s3://$(aws cloudformation describe-stacks --stack-name foci2020-${ENV} --query \"Stacks[0].Outputs[?OutputKey=='WebsiteBucket'].OutputValue\" --output text --profile ci) --profile ci",
     "test:api:dev": "jest --maxWorkers=4 --watchAll --silent",
     "test:api": "jest --maxWorkers=4 --silent",
     "lint:api": "eslint api shared test --ext .ts",
