--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postdeploy": "aws lambda invoke --function-name Foci2020-${ENV}-PostDeploy /dev/null",
     "build:api": "rimraf ./dist/api && webpack",
     "build:web": "rimraf ./dist/web && cd web && yarn build",
-    "build:web:LOCAL": "export ENV=LOCAL && rimraf ./dist/web && cd web && yarn build -c ${ENV}",
-    "build:web:CI": "export ENV=CI && rimraf ./dist/web && cd web && yarn build -c ${ENV}",
+    "build:web:LOCAL": "yarn build:web -c LOCAL",
+    "build:web:CI": "yarn build:web -c CI",
     "deploy:web:LOCAL": "export ENV=LOCAL && aws s3 sync dist/web s3://$(aws cloudformation describe-stacks --stack-name foci2020-${ENV} --query \"Stacks[0].Outputs[?OutputKey=='WebsiteBucket'].OutputValue\" --output text --profile losonczil) --profile losonczil",
     "deploy:web:CI": "export ENV=CI && aws s3 sync dist/web s3://$(aws cloudformation describe-stacks --stack-name foci2020-${ENV} --query \"Stacks[0].Outputs[?OutputKey=='WebsiteBucket'].OutputValue\" --output text --profile ci) --profile ci",
     "test:api:dev": "jest --maxWorkers=4 --watchAll --silent",
