--- a/cf.foci2020.yaml
+++ b/cf.foci2020.yaml
@@ -105,6 +105,16 @@ Resources:
         ClientId: !GetAtt Data.Outputs.ClientId
         Env: !Ref Env
 
+  Setting:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: sam.setting.yaml
+      Parameters:
+        LambdaRoleArn: !GetAtt Infrastructure.Outputs.LambdaRoleArn
+        Database: !GetAtt Data.Outputs.Database
+        UserPoolArn: !GetAtt Data.Outputs.UserPoolArn
+        Env: !Ref Env
+
   Api:
     Type: AWS::CloudFront::Distribution
     Properties:
@@ -225,6 +235,24 @@ Resources:
               - PATCH
               - POST
               - DELETE
+          - ForwardedValues:
+              QueryString: true
+              Headers:
+                - Authorization
+            PathPattern: /setting/*
+            TargetOriginId: Setting
+            ViewerProtocolPolicy: redirect-to-https
+            MinTTL: 0
+            MaxTTL: 0
+            DefaultTTL: 0
+            AllowedMethods:
+              - GET
+              - HEAD
+              - OPTIONS
+              - PUT
+              - PATCH
+              - POST
+              - DELETE              
         Origins:
           - DomainName: !GetAtt Team.Outputs.TeamApi
             Id: Team
@@ -246,6 +274,10 @@ Resources:
             Id: User
             CustomOriginConfig:
               OriginProtocolPolicy: https-only
+          - DomainName: !GetAtt Setting.Outputs.SettingApi
+            Id: Setting
+            CustomOriginConfig:
+              OriginProtocolPolicy: https-only              
 
   ApiDNSRecord:
     Type: AWS::Route53::RecordSet
