Website CloudFront to depend on API

--- a/cf.foci2020.yaml
+++ b/cf.foci2020.yaml
@@ -291,6 +291,8 @@ Resources:
 
   Website:
     Type: AWS::CloudFront::Distribution
+    DependsOn:
+      - Api
     Properties:
       DistributionConfig:
         Comment: !Sub "${Env}-Web"
