--- a/cf.infrastructure.yaml
+++ b/cf.infrastructure.yaml
@@ -56,6 +56,7 @@ Resources:
 
   WebsiteBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       AccessControl: PublicRead
       WebsiteConfiguration:
