--- a/cf.foci2020.yaml
+++ b/cf.foci2020.yaml
@@ -43,6 +43,7 @@ Resources:
       TemplateURL: cf.data.yaml
       Parameters:
         Env: !Ref Env
+        WebsiteDomain: !FindInMap [EnvMapping, !Ref Env, WebsiteDomain]
 
   Infrastructure:
     Type: AWS::CloudFormation::Stack
